<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_menu_search">Поиск</string>
    <string name="main_menu_media">Медиатека</string>
    <string name="main_menu_settings">Настройки</string>
    <string name="settings_menu_black_theme">Темная тема</string>
    <string name="settings_menu_share_app">Поделиться приложением</string>
    <string name="settings_menu_write_to_support">Написать в поддержку</string>
    <string name="settings_menu_user_agreement">Пользовательское соглашение</string>

    <string name="android_course_url" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="my_email" translatable="false">mfoxtrot@yandex.ru</string>
    <string name="support_subject_text">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>

    <string name="search_box_hint">Поиск</string>
    <string name="refresh">Обновить</string>
    <string name="connection_problem">Проблемы со связью</string>
    <string name="download_failed">Загрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="no_results">Ничего не нашлось</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
</resources>