<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.PlaylistMaker"
    style="@style/activity_container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id = "@+id/back_button"
            style="@style/activity_back_arrow"
            android:layout_gravity="center"/>
        <TextView
            style="@style/activity_title"
            android:text="@string/main_menu_settings"
            android:layout_marginLeft="28dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="40dp">
        <LinearLayout
            style="@style/settings_activity_list_item">
            <TextView
                style="@style/settings_activity_list_item_text"
                android:layout_weight="1"
                android:text="@string/settings_menu_black_theme"/>
            <Switch
                android:id="@+id/switch_dark_theme"
                style="@style/settings_activity_list_item_icon"/>
        </LinearLayout>
        <LinearLayout
            style="@style/settings_activity_list_item">
            <TextView
                style="@style/settings_activity_list_item_text"
                android:layout_weight="1"
                android:text="@string/settings_menu_share_app"/>
            <ImageView
                android:id="@+id/shareAppIcon"
                style="@style/settings_activity_list_item_icon"
                android:src="@drawable/ic_share" />
        </LinearLayout>
        <LinearLayout
            style="@style/settings_activity_list_item">
            <TextView
                style="@style/settings_activity_list_item_text"
                android:layout_weight="1"
                android:text="@string/settings_menu_write_to_support" />
            <ImageView
                android:id="@+id/supportIcon"
                style="@style/settings_activity_list_item_icon"
                android:src="@drawable/ic_support" />
        </LinearLayout>
        <LinearLayout
            style="@style/settings_activity_list_item">
            <TextView
                style="@style/settings_activity_list_item_text"
                android:layout_weight="1"
                android:text="@string/settings_menu_user_agreement" />
            <ImageView
                android:id="@+id/userAgreementIcon"
                style="@style/settings_activity_list_item_icon"
                android:src="@drawable/ic_submenu" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>