<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_background"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="14dp"
    android:paddingBottom="28dp"
    android:paddingRight="16dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:showDividers="middle"
        android:divider="@drawable/main_menu_divider"
        >

        <Button
            android:id="@+id/main_menu_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            app:icon = "@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding = "@dimen/main_menu_icon_padding"
            app:iconTint = "@color/menu_text"
            app:cornerRadius = "@dimen/main_menu_button_corner_radius"
            android:text="@string/main_menu_search"
            android:textColor="@color/menu_text"
            android:textSize="@dimen/main_menu_button_text_size"
            android:textAllCaps="false"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:foreground="?attr/selectableItemBackground"/>

        <Button
            android:id="@+id/main_menu_media"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            app:icon = "@drawable/ic_mediateka"
            app:iconGravity="textStart"
            app:iconPadding = "@dimen/main_menu_icon_padding"
            app:iconTint = "@color/menu_text"
            app:cornerRadius = "@dimen/main_menu_button_corner_radius"
            android:text="@string/main_menu_media"
            android:textColor="@color/menu_text"
            android:textSize="@dimen/main_menu_button_text_size"
            android:textAllCaps="false"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:foreground="?attr/selectableItemBackground"/>

        <Button
            android:id="@+id/main_menu_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            app:icon = "@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconPadding = "@dimen/main_menu_icon_padding"
            app:iconTint = "@color/menu_text"
            app:cornerRadius = "@dimen/main_menu_button_corner_radius"
            android:text="@string/main_menu_settings"
            android:textColor="@color/menu_text"
            android:textSize="@dimen/main_menu_button_text_size"
            android:textAllCaps="false"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:foreground="?attr/selectableItemBackground"/>
    </LinearLayout>
</LinearLayout>